syntax = "proto3";

option go_package = "pb";

message Company {
  int64 id = 1;
  string name = 2;
  string status = 3;
  string createdBy = 4;
  string updatedBy = 5;
}
// List
message CompanyListRequest {
  int64 id = 1;
  string name = 2;
  string status = 3;
  string createdBy = 4;
  string updatedBy = 5;
  int64 page = 6;
  int64 pageSize = 7;
}
message CompanyListResponse {
  repeated Company company = 1;
}

// GetByID
message CompanyGetByIDRequest {
  int64 id = 1;
}
message CompanyGetByIDResponse {
  Company company = 1;
}

// GetByIDs
message CompanyGetByIDsRequest {
  repeated int64 ids = 1;
}
message CompanyGetByIDsResponse {
  repeated Company company = 1;
}

// Insert
message CompanyInsertRequest {
  string name = 1;
  string status = 2;
  string createdBy = 3;
  string updatedBy = 4;
}
message CompanyInsertResponse {
  Company company = 1;
}

message CompanyUpdateRequest {
  string name = 1;
  string status = 2;
  string createdBy = 3;
  string updatedBy = 4;
}
message CompanyUpdateResponse {
  Company company = 1;
}

message CompanyDeleteRequest {
  int64 id = 1;
}
message CompanyDeleteResponse {
  int64 id = 1;
}


service DeltaService {
  rpc CompanyList (CompanyListRequest) returns (CompanyListResponse);
  rpc CompanyGetByID (CompanyGetByIDRequest) returns (CompanyGetByIDResponse);
  rpc CompanyGetByIDs (CompanyGetByIDsRequest) returns (CompanyGetByIDsResponse);
  rpc CompanyInsert (CompanyInsertRequest) returns (CompanyInsertResponse);
  rpc CompanyUpdate (CompanyUpdateRequest) returns (CompanyUpdateResponse);
  rpc CompanyDelete (CompanyDeleteRequest) returns (CompanyDeleteResponse);
}